--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "B Sai Bhaskar",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "dat.gui": "^0.7.9",
     "three": "^0.161.0"
   },
